# linux_Project

YOLO11/: Model_conversion.md  环境搭建.md
yolo11_ncnn_demo/: CMakeLists.txt  error.md  flow_chart.md
yolo11_ncnn_demo/model/: model.ncnn.param
yolo11_ncnn_demo/src/: main.cpp
